// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button row 1`] = `
"<div class=\\"pe-button-row\\">
  <a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      One
    </div>
  </div></a><a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Two
    </div>
  </div></a><a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Three
    </div>
  </div></a>
</div>
"
`;

exports[`Dark tone class + light tone 1`] = `
"<div style=\\"background: rgb(255, 255, 255);\\" class=\\"pe-button-row\\">
  <a class=\\"pe-button pe-text-button pe-light-tone\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Normal
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button pe-button--disabled pe-light-tone\\"
  tabindex=\\"-1\\" disabled>
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-button__label\\">
      Disabled
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button pe-light-tone tests-button-themed-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Theme
    </div>
  </div></a>
</div>
"
`;

exports[`Dark tone class + light tone class 1`] = `
"<div style=\\"background: rgb(255, 255, 255);\\" class=
\\"pe-button-row pe-light-tone\\">
  <a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Normal
    </div>
  </div></a><a class=\\"pe-button pe-text-button pe-button--disabled\\"
  tabindex=\\"-1\\" disabled>
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-button__label\\">
      Disabled
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button tests-button-themed-button\\" tabindex=
  \\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Theme
    </div>
  </div></a>
</div>
"
`;

exports[`No options 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: after 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div><span>After</span></a>
"
`;

exports[`Option: before 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=
\\"0\\"><span>Before</span>
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: children 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div><span>Child</span>
</div></a>
"
`;

exports[`Option: class 1`] = `
"<a class=\\"pe-button pe-text-button class-x\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: className 1`] = `
"<a class=\\"pe-button pe-text-button className-x\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: content 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div><span>Content</span>
</div></a>
"
`;

exports[`Option: element 1`] = `
"<button class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></button>
"
`;

exports[`Option: formaction 1`] = `
"<a formaction=\\"http://polythene.js.org\\" class=
\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Form action
  </div>
</div></a>
"
`;

exports[`Option: id 1`] = `
"<a id=\\"id-x\\" class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: inactivate (2) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Inactivated for 2s
  </div>
</div></a>
"
`;

exports[`Option: inactive (false) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Not inactive
  </div>
</div></a>
"
`;

exports[`Option: inactive (true) 1`] = `
"<a class=\\"pe-button pe-text-button pe-button--inactive\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Inactive
  </div>
</div></a>
"
`;

exports[`Option: ink (false) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    No ink
  </div>
</div></a>
"
`;

exports[`Option: label -- dark tone class 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Label
  </div>
</div></a>
"
`;

exports[`Option: label 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Label
  </div>
</div></a>
"
`;

exports[`Option: ripple 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div style=\\"color: rgb(33, 150, 243);\\" class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Custom ripple
  </div>
</div></a>
"
`;

exports[`Option: router url (with hash) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\" href=\\"#/shadow\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Go to #/shadow
  </div>
</div></a>
"
`;

exports[`Option: selected 1`] = `
"<a class=\\"pe-button pe-text-button pe-button--selected\\" tabindex=
\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Selected
  </div>
</div></a>
"
`;

exports[`Option: style (colors) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div style=
\\"background-color: rgb(239, 108, 0); color: rgb(255, 255, 255);\\"
class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Styled
  </div>
</div></a>
"
`;

exports[`Option: tabindex 1`] = `
"<a tabindex=\\"3\\" class=\\"pe-button pe-text-button\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: tone "dark" -- dark tone class 1`] = `
"<a class=\\"pe-button pe-text-button pe-dark-tone\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Label
  </div>
</div></a>
"
`;

exports[`Option: url (with oncreate) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\" href=\\"#!/shadow\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Go to /shadow
  </div>
</div></a>
"
`;

exports[`Option: wash (false) 1`] = `
"<a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    No wash
  </div>
</div></a>
"
`;

exports[`Themed Button (colors) 1`] = `
"<a class=\\"pe-button pe-text-button tests-button-themed-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Themed Button
  </div>
</div></a>
"
`;

exports[`Themed Button (hover) 1`] = `
"<a class=\\"pe-button pe-text-button tests-button-hover-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Hover Button
  </div>
</div></a>
"
`;

exports[`Themed Button -- dark tone class 1`] = `
"<a class=\\"pe-button pe-text-button tests-button-themed-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Themed Button
  </div>
</div></a>
"
`;

exports[`Themed Button blue on dark -- dark tone class 1`] = `
"<a class=\\"pe-button pe-text-button blue-on-dark-Button\\" tabindex=
\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Blue on dark Button
  </div>
</div></a>
"
`;

exports[`Themed Button: (option: border) -- dark tone class 1`] = `
"<a class=
\\"pe-button pe-text-button pe-button--border tests-button-bordered-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Border dark tone
  </div>
</div></a>
"
`;

exports[`Themed Button: (option: border) 1`] = `
"<a class=
\\"pe-button pe-text-button pe-button--border tests-button-bordered-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Border
  </div>
</div></a>
"
`;
